<resources>
	<string name="app_name">Buzz</string>

	<string name="digit_1">1</string>
	<string name="digit_2">2</string>
	<string name="digit_3">3</string>
	<string name="digit_4">4</string>
	<string name="digit_5">5</string>
	<string name="digit_6">6</string>
	<string name="digit_7">7</string>
	<string name="digit_8">8</string>
	<string name="digit_9">9</string>
	<string name="digit_0">0</string>

	<string name="page_0">Set Timer</string>
	<string name="page_1">Recent Timers</string>
	<string name="default_display_digit">0</string>
	<string name="secs_text">s</string>
	<string name="minute_text">m</string>
	<string name="hours_text">h</string>
	<string name="notification_message_running">"Time Remaining: "</string>
	<string name="notification_message_paused">"Timer paused: "</string>
	<string name="notification_message_finished">"Timer Complete!"</string>
	<string name="notification_header">Buzz</string>
	<string name="cd_ib_delete">Backspace</string>
	<string name="add_min_content_description">Add 1 minute to timer</string>
	<string name="cancel_timer_content_description">Stop Timer</string>
	<string name="pause_timer_content_description">Pause Timer</string>
	<string name="pause_timer">Pause</string>
	<string name="play_timer">Play</string>
	<string name="cancel_timer">Cancel</string>
	<string name="menu_settings">Settings</string>
	<string name="SVG_play">M10,16.5l3,-2.25v-4.5l-3,-2.25zM13,14.25l3,-2.25v0l-3,-2.25zM12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8 8,3.59 8,8 -3.59,8 -8,8z</string>
	<string name="SVG_pause">M9,16l2,0v-8l-2,0zM13,16l2,0v-8l-2,0zM12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8 8,3.59 8,8 -3.59,8 -8,8z</string>
	<string name="replay_timer">Replay</string>
	<string name="time_remaining_label">Time Remaining</string>
	<string name="pref_syncConnectionTypes_default">Default</string>
	<string name="title_activity_settings">Settings</string>

	<string name="pref_notification_true">Show notification while timer is running</string>
	<string name="pref_notification_false">Don\'t show notification while timer is running</string>
	<string name="pref_key_time_picker">pref_number_picker</string>
	<string name="pref_default_timer_true">Give a default time when no time is set</string>
	<string name="pref_default_timer_false">No timer is set without your input.</string>
	<string name="pref_time_picker">Select a default timer</string>
	<string name="pref_title_time_picker">Default timer</string>
	<string name="pref_title_default_timer">Set default</string>
	<string name="pref_key_default_timer">pref_default_timer</string>
	<string name="pref_title_notification">Notification</string>
	<string name="pref_key_notification">pref_notification</string>
	<string name="pref_category_default_timer">Default Timer</string>
	<string name="pref_key_replace_timer">pref_replace_timer</string>
	<string name="pref_title_replace_timer">Replace old timer</string>
	<string name="pref_replace_timer_false">Don\'t replace old timer when a new timer is set</string>
	<string name="pref_replace_timer_true">Replace old timer when a new timer is set</string>
	<string name="toast_no_input">No time has been entered</string>
	<string name="toast_timer_running">Timer already running</string>


</resources>