<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/display_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View style="@style/blank_view" />

        <TextView
            android:id="@+id/hours"
            style="@style/display_digit_a"
            android:text="@string/default_display_digit" />

        <TextView
            android:id="@+id/hours2"
            style="@style/display_digit"
            android:text="@string/default_display_digit" />

        <TextView
            android:id="@+id/hoursText"
            style="@style/display_digit_text"
            android:text="@string/hours_text" />

        <TextView
            android:id="@+id/mins"
            style="@style/display_digit_a"
            android:text="@string/default_display_digit" />

        <TextView
            android:id="@+id/mins2"
            style="@style/display_digit"
            android:text="@string/default_display_digit" />

        <TextView
            android:id="@+id/minsText"
            style="@style/display_digit_text"
            android:text="@string/mins_text" />

        <TextView
            android:id="@+id/secs"
            style="@style/display_digit_a"
            android:text="@string/default_display_digit" />

        <TextView
            android:id="@+id/secs2"
            style="@style/display_digit"
            android:text="@string/default_display_digit" />

        <TextView
            android:id="@+id/secsText"
            style="@style/display_digit_text"
            android:text="@string/secs_text" />

        <View style="@style/blank_view" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete_description"
            android:src="@drawable/ic_backspace_grey_500_48dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/numberPad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <LinearLayout style="@style/digit_row">

            <Button
                android:id="@+id/digit1"
                style="@style/button_digit"
                android:text="@string/digit_1" />

            <Button
                android:id="@+id/digit2"
                style="@style/button_digit"
                android:text="@string/digit_2" />

            <Button
                android:id="@+id/digit3"
                style="@style/button_digit"
                android:text="@string/digit_3" />
        </LinearLayout>

        <LinearLayout style="@style/digit_row">

            <Button
                android:id="@+id/digit4"
                style="@style/button_digit"
                android:text="@string/digit_4" />

            <Button
                android:id="@+id/digit5"
                style="@style/button_digit"
                android:text="@string/digit_5" />

            <Button
                android:id="@+id/digit6"
                style="@style/button_digit"
                android:text="@string/digit_6" />
        </LinearLayout>

        <LinearLayout style="@style/digit_row">

            <Button
                android:id="@+id/digit7"
                style="@style/button_digit"
                android:text="@string/digit_7" />

            <Button
                android:id="@+id/digit8"
                style="@style/button_digit"
                android:text="@string/digit_8" />

            <Button
                android:id="@+id/digit9"
                style="@style/button_digit"
                android:text="@string/digit_9" />
        </LinearLayout>

        <LinearLayout style="@style/digit_row">

            <View style="@style/blank_view" />

            <Button
                android:id="@+id/digit0"
                style="@style/button_digit"
                android:text="@string/digit_0" />

            <View style="@style/blank_view" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fabLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@android:drawable/ic_media_play"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp" />

    </RelativeLayout>


</LinearLayout>
