<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/bottom_bar_padding"
	android:background="@color/colorPrimary"
	tools:context=".activities.FragmentRunningTimer">

	<TextView
		android:id="@+id/timeRemainingLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:gravity="center"
		android:text="@string/time_remaining_label"
		android:textColor="@color/textColour"
		android:textSize="25sp"/>

	<TextView
		android:id="@+id/timeRemaining"
		android:layout_width="wrap_content"
		android:paddingTop="@dimen/bottom_bar_padding"
		android:layout_height="wrap_content"
		android:layout_below="@id/timeRemainingLabel"
		android:layout_centerHorizontal="true"
		android:gravity="center"
		android:textSize="40sp"
		tools:text="06:45:03"
		android:textColor="@color/textColour"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingTop="@dimen/bottom_bar_padding"
		android:layout_below="@id/timeRemaining"
		android:layout_centerHorizontal="true"
		android:gravity="center">

		<ImageView
			android:id="@+id/iv_add_min"
			style="@style/timer_buttons"
			android:src="@drawable/ic_add_min_circle"
			android:contentDescription="@string/add_min_content_description"/>

		<ImageView
			android:id="@+id/iv_pause_timer"
			style="@style/timer_buttons"
			android:src="@drawable/ic_pause_circle"
			android:contentDescription="@string/pause_timer_content_description"/>

		<ImageView
			android:id="@+id/iv_cancel_timer"
			style="@style/timer_buttons"
			android:contentDescription="@string/cancel_timer_content_description"
			android:src="@drawable/ic_cancel_circle"/>

	</LinearLayout>

</RelativeLayout>